--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.2.5",
     "@picocss/pico": "^1.5.7",
+    "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "concurrently": "^7.6.0",
     "eslint": "^8.34.0",
@@ -11,6 +12,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sass": "^1.58.2",
     "stylelint": "^15.1.0",
     "stylelint-config-recommended-scss": "^9.0.1",
