--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.2.5",
-    "@picocss/pico": "^1.5.7",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "concurrently": "^7.6.0",
@@ -11,6 +10,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,6 +20,7 @@
     "stylelint-config-standard": "^30.0.1",
     "stylelint-declaration-use-variable": "^1.7.3",
     "stylelint-scss": "^4.4.0",
+    "tailwindcss": "^3.2.7",
     "vite": "^4.0.0",
     "vite-plugin-ruby": "^3.1.2"
   },
